# dingir

./: .gitignore  README.md  pyproject.toml
.antigravitycli/: f1385982-f79a-4cef-a8dd-acc893dd72b2.json
src/: __init__.py  chat.py  config.py  log.py  memory.py
src/agents/: __init__.py  core.py  guards.py  log.py
src/agents/llms/: __init__.py  base.py  gemini_driver.py  hf_driver.py  hf_local.py  ollama_driver.py  openai_compatible.py  openai_driver.py
src/agents/stdguards/: __init__.py  conditional.py  iteration.py  path.py  secure_action.py
src/agents/stdtools/: __init__.py  agent_ops.py  fs.py  system.py  web.py
src/dingir/: __init__.py  chat.py
src/dingir/agents/llms/: base.py  gemini_driver.py  hf_driver.py  ollama_driver.py  openai_driver.py
src/dingir/rag/stores/: __init__.py  chroma.py
src/rag/: __init__.py
src/rag/stores/: __init__.py  base.py  chroma.py  native.py
tests/: run_tests.py  test_config_composition.py  test_stdtools.py
tests/drivers/: gemini.py  huggingface.py  huggingface_local.py  ollama.py  openai.py
