[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dingir"
version = "0.4.5"
description = "The Django-grade stateless multi-agent orchestration and contextual data store engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "google-genai>=0.1.0",
    "ollama>=0.2.0",
    "huggingface_hub>=0.20.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
rag = [
    "semchunk>=2.0.0",
    "numpy>=1.20.0",
    "chromadb>=0.4.0"
]

local = [
    "torch>=2.0.0",
    "transformers>=4.40.0"
]

[tool.setuptools]
package-dir = {"dingir" = "src"}
packages = [
    "dingir",
    "dingir.agents",
    "dingir.agents.llms",
    "dingir.agents.stdtools",
    "dingir.rag",
    "dingir.rag.stores",
]

